--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,28 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+@plugin "daisyui";
+
+@theme {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+}
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
 
 :root {
   --background: #ffffff;
@@ -17,5 +39,14 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
+  cursor: url('https://cdn.custom-cursor.com/db/17942/32/minimal-gradient-red-heart-fire-cursor.png'), auto;
+}
+
+button:hover {
+  cursor: url('https://cdn.custom-cursor.com/db/17941/32/minimal-gradient-red-heart-fire-pointer.png'), auto;
+}
+
+label:hover, a:hover {
+  cursor: url('https://cdn.custom-cursor.com/db/17942/32/minimal-gradient-red-heart-fire-cursor.png'), auto;
 }
