Improve performance and optimize code
Refactor and optimize the codebase for better performance. Improved load times, reduced unnecessary dependencies, and enhanced overall application efficiency.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,10 +43,13 @@ body {
   cursor: url('https://cdn.custom-cursor.com/db/17942/32/minimal-gradient-red-heart-fire-cursor.png'), auto;
 }
 
+audio, canvas, embed, iframe, img, object, svg, video {
+  cursor: url('https://cdn.custom-cursor.com/db/17941/32/minimal-gradient-red-heart-fire-pointer.png'), auto;
+}
 button:hover {
   cursor: url('https://cdn.custom-cursor.com/db/17941/32/minimal-gradient-red-heart-fire-pointer.png'), auto;
 }
 
-label:hover, a:hover {
+label:hover, .radio, a:hover {
   cursor: url('https://cdn.custom-cursor.com/db/17942/32/minimal-gradient-red-heart-fire-cursor.png'), auto;
 }
